style.css
/******************** GENERAL ********************/

/*************** body ***************/

body {
    font-family: 'Lato', sans-serif;
    position: relative;
}

/*************** columns and rows ***************/

.row, .col {
    margin: 0;
    padding: 0;
}

/*************** headings ***************/

h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
}

h3 {
    line-height: 1;
    margin-bottom: 20px;
}

/*************** images ***************/

img {
    max-width: 100%;
    height: auto;
}

/*************** lists ***************/

ul, ol {
    list-style: none;
}

/*************** links ***************/

a {
    color: black;
}

a:hover {
    text-decoration: none;
    color: #a01a58;
}

/*************** sections ***************/

section {
    padding: 45px 0 0;

}

section .heading {
    text-align: center;
    padding-bottom: 30px;
}

.red-divider {
    width: 100px;
    height: 2px;
    background: #a01a58;
    margin: 0 auto 20px;

}

.white-divider {
    width: 100px;
    height: 2px;
    background: #fff;
    margin: 0 auto 20px;
}


/******************** NAVIGATION MENU ********************/

.navbar {
    background-color: #a01a58;
    font-size: 12px;
    border-bottom: 1px solid #fff;
    letter-spacing: 4px;
    text-transform: uppercase;
    font-weight: bold;
    padding: 10px 0;
}

.nav-item {
    margin: 0 10px;
}

.nav-pills .nav-link {
    color: #fff !important;
    text-align: center;
}

.nav-pills .nav-link.active, .nav-pills .nav-link:hover, .nav-pills .nav-link:focus {
    color: #a01a58 !important;
    background-color: #fff !important;
}

.navbar-toggler {
    color: #fff !important;
    border-style: none;
}


/******************** HOME ********************/

#home {
    padding-bottom: 40px;
    background: #a01a58;
}

.profile-picture {
    text-align: center;
    margin: 0 auto;
}

#home .heading {
    padding-bottom: 20px;
}

#home .heading h1 {
    color: #fff;
    text-transform: uppercase;
    margin-top: 20px;
}

.uploadCv {
    font-weight: bold;
    text-transform: uppercase;
    color: white;
    border: 1px solid white;
    display: inline-block;
    margin-top: 20px;
    padding: 18px 50px;
    border-radius: 3px;
    transition: all 0.3s ease-in-out;
}

.uploadCv:hover {
    background: white;
    color: #a01a58;
    text-decoration: none;
}


/******************** EXPERIENCES ********************/

#experiences {
    background: #a01a58;
}

.experiences-container {
    padding: 0;
}

#experiences .heading h2 {
    color: #fff;
}

.timeline {
    padding: 30px 10px;
    position: relative;
}

.timeline:before {
    top: 10px;
    bottom: 50px;
    position: absolute;
    content: " ";
    width: 4px;
    background-color: #333;
    left: 50%;
    margin-left: -2px;
}

.timeline > li {
    margin-bottom: 20px;
    position: relative;
}

.timeline > li:after {
    clear: both;
}

.timeline > li:before, .timeline > li:after {
    content: " ";
    display: table;
}

.timeline li .timeline-badge {
    color: #a01a58;
    width: 50px;
    line-height: 50px;
    font-size: 20px;
    text-align: center;
    background-color: #ddd;
    border-radius: 50%;
    margin: 20px auto -17px;
}

.fa-caret-up {
    font-size: 50px;
    margin-bottom: -20px;
    color: white;
}

.fa-caret-right, .fa-caret-left {
    display: none;
}


.timeline-panel-container, .timeline-panel-container-inverted {
    text-align: center;
}

.timeline-panel {
    height: 400px;
    border: 1px solid #d4d4d4;
    border-radius: 7px;
    padding: 0 15px;
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
    background: #fff;
    transition: transform 1s;
    transform-style: preserve-3d;
}

.timeline-panel:hover {
    cursor: pointer;
}

.timeline-panel-beach {
    height: 320px;
}

.panel-front, .panel-back {
    backface-visibility: hidden;
    position: absolute;
    height: 100%;
    width: 100%;
    padding: 20px 10px 10px;
}

.panel-back {
    transform: rotateY(180deg);
}

.xp-name {
    width: 100%;
}

.icon-flip-box {
    padding-right: 10px;
    width: 80%;
    text-align: end;
    position: fixed;
    backface-visibility: hidden;
}

.icon-flip {
    width: 25px;
    opacity: 0.5;
}

.timeline-heading h3 {
    margin-top: 5px;
    font-size: 20px;
}

.timeline-heading h4, .panel-front h4 {
    color: #a01a58;
    line-height: 1.5;
}

.rotated-front {
    transform: rotateY(180deg);
}

.rotated-back {
    transform: rotateY(360deg);
}

.fa-clock {
    margin-right: 5px;
    font-size: 15px;
}


/******************** EDUCATION ********************/

#education {
    background: #fff;
}

#education .heading h2 {
    color: #a01a58;
}

.education-block {
    margin: 0 0 20px;
    text-align: center;
    padding: 10px 0;
    background: #ddd;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 5px rgba(0, 0, 0, 0.24);;
    height: max-content;
}

.education-university {
    margin-bottom: 0;
}

.education-block h5 {
    color: #888;
    font-size: 15px;
    margin-bottom: 15px;
}

.education-block .fa-graduation-cap {
    font-size: 35px;
}

.education-block h3 {
    color: #a01a58;
}

.education-block h4 {
    margin-bottom: 20px;
}

.education-block .red-divider {
    margin-bottom: 20px;
}

.see-more {
    padding: 10px 0 25px;
}

.arrow-skills {
    width: 25px;
}

.arrow-skills, .arrow-skills-medium-screen {
    transition: all 0.3s ease-in-out;
    margin-right: 25px;
}

.arrow-skills:hover, .arrow-skills:focus {
    color: #a01a58;
}

.arrow-skills-medium-screen {
    display: none;
}

.education-block .fa-github {
    font-size: 25px;
    transition: all 0.3s ease-in-out;
    margin-left: 25px;
}

.project-details {
    padding: 0;
    margin: 0 auto;
    width: 85%;
    font-weight: bold;
}

.skills {
    display: none;
    border-radius: 100%;
    background-color: #a01a58;
    color: white;
    padding: 20px 0 10px;
    width: 55%;
    margin: 0 auto 20px;
    position: relative;
}

.skills-projectThree {
    width: 70%;
}
/* ... */

